--- a/index.html
+++ b/index.html
@@ -12,5 +12,30 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Blog-preview-card</title>
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <div class="card">
+        <img
+          class="images"
+          src="/assets/images/illustration-article.svg"
+          alt="illustration-article"
+        />
+        <button class="button">Learning</button>
+        <p class="subtitle">published 21 Dec 2023</p>
+        <h1 class="title">HTML & CSS foundations</h1>
+        <p class="text">
+          These lenguages are the backbone of very webside, defining
+          structure,content and presentation.
+        </p>
+        <div class="conten_name">
+          <img
+            class="photo"
+            src="/assets/images/image-avatar.webp"
+            alt="avatar"
+          />
+          <p class="text_name">Greg Hooper</p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
